fix conflicts for logs #96